deploy/overlays/local/image-patches.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: gym-log-book-server
spec:
  template:
    spec:
      containers:
        - name: server
          image: ghcr.io/michael-bailey/gym-log-book/server:dev
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: gym-log-book-web
spec:
  template:
    spec:
      containers:
        - name: web
          image: ghcr.io/michael-bailey/gym-log-book/web:dev
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 20
