deploy/overlays/local/rollout-patches.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: gym-log-book-web
spec:
  replicas: 1
  strategy:
    blueGreen:
      activeService: gym-log-book-web-stable
      previewService: gym-log-book-web-preview
      autoPromotionEnabled: true
