deploy/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gym-log-book
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: gym.localhost
      http:
        paths:
          - path: /rpc
            pathType: Prefix
            backend:
              service:
                name: gym-log-book-server
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gym-log-book-web-stable
                port:
                  number: 80
    - host: canary.gym.localhost
      http:
        paths:
          - path: /rpc
            pathType: Prefix
            backend:
              service:
                name: gym-log-book-server
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gym-log-book-web-preview
                port:
                  number: 80
